Changed header style and centered links. Moved some keyframe classes to their respective component css. Fixed project card overflowing.

--- a/src/App.css
+++ b/src/App.css
@@ -29,55 +29,3 @@ html {
   --spacer-4: 2.5rem;
   --spacer-5: 3rem;
 }
-
-/* Animation classes */
-
-.slide-in-left {
-  animation: slide-in-left 500ms ease-out;
-}
-
-.fade-in-down {
-  animation: fade-in-down 1000ms ease-out;
-}
-
-/* Keyframes */
-
-@keyframes slide-in-left {
-  0% {
-    opacity: 0;
-    transform: translateY(-40px);
-  }
-
-  70% {
-    transform: translateY(clamp(2px, 1vw, 8px));
-  }
-
-  100% {
-    opacity: 1;
-    transform: translateY(0);
-  }
-}
-
-@keyframes fade-in-down {
-
-  0%,
-  25% {
-    opacity: 0;
-  }
-
-  100% {
-    opacity: 1;
-  }
-}
-
-@keyframes color-change {
-
-  0%,
-  70% {
-    color: white;
-  }
-
-  100% {
-    color: var(--color-orange);
-  }
-}
