--- a/src/Components/ProjectScreen/titleBar.css
+++ b/src/Components/ProjectScreen/titleBar.css
@@ -4,6 +4,7 @@
     display: flex;
     align-items: center;
     justify-content: center;
+    border-top: 2px solid white;
 }
 
 #titleBar-Wrapper {
@@ -55,7 +56,7 @@
     #titleBar-Wrapper {
         flex-direction: column;
         padding: var(--spacer-3) 0;
-        padding-bottom: var(--spacer-4);
+        padding-bottom: 0;
     }
 
     #titleBar-Wrapper h1 {
@@ -64,5 +65,6 @@
 
     #search-Field {
         width: 12rem;
+        font-size: 16px;
     }
 }
